# claw-cron

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  test.md
.planning/: PROJECT.md  REQUIREMENTS-v2.1.md  REQUIREMENTS-v2.2.md  REQUIREMENTS.md  ROADMAP-v2.1.md  ROADMAP-v2.2.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: capture-hangs-after-openid.md  channels-add-validation-error.md  imessage-not-sending.md
.planning/debug/resolved/: inquirerpy-default-type-error.md  qqbot-capture-auth-fail.md  reminder-qqbot-send-fail.md
.planning/phases/01-project-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-task-management-commands/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-execution-engine-chat/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-scheduler-server/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-ai-provider-refactor/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md
.planning/phases/06-message-channels-imessage/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-qq-channel/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md
.planning/phases/08-notification-reminder/: 08-01-PLAN.md  08-01-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  ai-providers.md  channels.md
docs/debug/: 001.md  002.md
docs/plan/: v0.4.0.md
docs/todo/: claw-cron-v0.1.md  claw-cron-v0.3.md  claw-cron-v1.0.md  v0.3.3.md  v0.3.4.md  v0.3.5.md
skills/claw-cron/: SKILL.md
src/claw_cron/: __about__.py  __init__.py  __main__.py  agent.py  cli.py  condition.py  config.py  contacts.py  context.py  executor.py  notifier.py  openim_manager.py  prompt.py  scheduler.py  storage.py  template.py
tests/: test_channels.py  test_contacts.py  test_prompt.py  test_qqbot_events.py
(+135 files in other folders)
