[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-cron"
dynamic = ["version"]
description = "AI-powered cron task manager"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "wxnacy", email = "371032668@qq.com" },
]
dependencies = [
    "click",
    "rich",
    "pyyaml",
    "anthropic",
    "openai",
    "pydantic-settings",
    "macpymessenger>=0.2.0",
    "tenacity",
    "inquirerpy>=0.3.4",
    "websockets",
    "httpx",
    "openim-sdk @ file:///Users/wxnacy/Projects/OpenIM/python-sdk",
    "aiosmtplib>=3.0",
    "markdown>=3.5",
    "desktop-notifier>=6.2.0",
    "pync>=2.0.3",
    "codebuddy-agent-sdk",
]

[project.scripts]
claw-cron = "claw_cron.cli:cli"

[tool.hatch.version]
path = "src/claw_cron/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
